reminders: fix the styling of reminders.
This adjusts the line-height, which was prevoius way too large.
It adds some margin to content. and overall looks good for now, though
currenly design is given very less priority.

--- a/static/scss/reminder-app.scss
+++ b/static/scss/reminder-app.scss
@@ -157,6 +157,11 @@ main {
     @extend .handle-text-overflow;
   }
 
+  .content {
+    line-height: 1.5;
+    margin: 3px 0;
+  }
+
   .due-date {
     content: "Due: ";
     @extend .error;
